Fixing off-by-one vertical alignment of playback head in Safari
This overrides the default slider thumb alignment for Safari, which
normally includes a 1px offset to line up properly with the track.
Since the playback head slider doesn't have a visible track, it
causes the thumb to be slightly off.

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -212,6 +212,7 @@ input[type='range'].sequencer-playback-header::-webkit-slider-thumb {
   background: #aaaaaaaa;
   border: 2px solid black;
   box-sizing: border-box;
+  margin-top: -0.75rem;
 }
 
 input[type='range'].sequencer-playback-header::-moz-range-thumb {
